# spin3d

./: .gitignore  CMakeLists.cool.txt  CMakeLists.txt  main.cpp  main_cool.cpp
src/: app_config.h  command_panel.h  history_panel.h  holo_core_widget.h  markdown_browser.h  settings_panel.h  spin3d_common.h  ui_style.h
